chore: adiciona componente de skeleton

--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -20,7 +20,7 @@
   --neutral-900: oklch(0.145 0 0);
 
   /* Accent */
-  --accent-100: #e9ebef;
+  --accent-100: #eaedee;
   --accent-900: #030213;
 
   /* Destructive */
