chore: adiciona componentes de pagina

--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 
 :root {
   /* Font */
@@ -121,4 +123,5 @@ body {
   background: var(--color-background);
   color: var(--color-foreground);
   font-family: var(--font-sans);
+  font-display: swap;
 }
